# wordbox

./: README.rst  pyproject.toml
tests/: test_wordbox_103701218857000_flymake.py
wordbox/: __init__.py  configurations.py  configurations_113426439784000_flymake.py  experiments.py  get_file_info.py  run_experiments.py  solve_glue.py  solver_stuff.py
