[tool.poetry]
name = "wordbox"
version = "0.1.0"
description = "Use sacred to run experiments on the Wordbox problem."
authors = ["Victor S. Miller <victorsmiller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sacred = "^0.8.2"
pymongo = "^3.11.3"
tinydb = "^4.4.0"
tinydb-serialization = "^2.1.0"
hashfs = "^0.7.2"
homomorphism = {git = "https://github.com/algebravic/homomorphism"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
solve = "wordbox.experiments:run_main"
experiments = "wordbox.run_experiments:main"
cnf = "wordbox.solve_glue:make_cnf"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

